--- a/Proyecto2/index.html
+++ b/Proyecto2/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Media Query Practice</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="text">Hello Screen !</div>
+        <div class="header"></div>
+            <div class="header__logo">Miya Ruma</div>
+            <div class="header__menu"></div>
+                <div class="header__menu-1">Home</div>
+                <div class="header__menu-2">Portfolio</div>
+                <div class="header__menu-3">Context</div>    
+        <div class="main"></div>
+            <div class="main__image"></div>
+            <div class="main__text">
+                <div class="main__text-1">Hello👋</div>
+                <div class="main__text-2">I'm <span>Miya Ruma </span></div>
+                <div class="main__text-3">A Designer From</div>
+                <div class="main__text-4">Tokyo, Japan</div>
+            </div>
+        <div class="footer">
+            <div class="footer__instagram">
+                <img src="" alt="">
+            </div>
+            <div class="footer__twitter">
+                <img src="" alt="">
+            </div>
+            <div class="footer__dribbble">
+                <img src="" alt="">
+            </div>
+            <div class="footer__behance">
+                <img src="" alt="">
+            </div>
+        </div>
     </div>
 
     <div id="size"></div>
 </body>
 <script src="main.js"></script>
+
 </html>
