--- a/Proyecto2/index.html
+++ b/Proyecto2/index.html
@@ -10,13 +10,15 @@
 
 <body>
     <div class="container">
-        <div class="header"></div>
+        <div class="header">
             <div class="header__logo">Miya Ruma</div>
-            <div class="header__menu"></div>
+            <div class="header__menu">
                 <div class="header__menu-1">Home</div>
                 <div class="header__menu-2">Portfolio</div>
-                <div class="header__menu-3">Context</div>    
-        <div class="main"></div>
+                <div class="header__menu-3">Context</div> 
+            </div> 
+        </div>  
+        <div class="main">
             <div class="main__image"></div>
             <div class="main__text">
                 <div class="main__text-1">Hello👋</div>
@@ -24,23 +26,24 @@
                 <div class="main__text-3">A Designer From</div>
                 <div class="main__text-4">Tokyo, Japan</div>
             </div>
+        </div>
         <div class="footer">
             <div class="footer__instagram">
-                <img src="" alt="">
+                <img src="../images/instagram.png" alt="">
             </div>
             <div class="footer__twitter">
-                <img src="" alt="">
+                <img src="../images/twitter-sign.png" alt="">
             </div>
             <div class="footer__dribbble">
-                <img src="" alt="">
+                <img src="../images/dribbble-logo.png" alt="">
             </div>
             <div class="footer__behance">
-                <img src="" alt="">
+                <img src="../images/behance.png" alt="">
             </div>
         </div>
     </div>
 
-    <div id="size"></div>
+    <!-- <div id="size"></div> -->
 </body>
 <script src="main.js"></script>
 
